Configure domain name and Fly application

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <h1>Interstellar Radio</h1>
-    <button onclick="connectViaWebusb()">Connect via WebUSB</button>
-    <div id="data"></div>
+    <button onclick="connectViaWebusb()">Connect via WebUSB</button><br>
+    <div id="data">Data from WebUSB: </div>
+    <h2>Instructions and source code</h2>
+    <div><a href="https://github.com/sethmlarson/interstellar-radio">GitHub</a></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js" integrity="sha512-zoJXRvW2gC8Z0Xo3lBbao5+AS3g6YWr5ztKqaicua11xHo+AvE1b0lT9ODgrHTmNUxeCw0Ry4BGRYZfXu70weg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="/static/js/interstellar-webusb.js"></script>
   </body>
